--- a/Teamply/Teamply/Screen/Home/attendTeamProject/attendTeamProject.storyboard
+++ b/Teamply/Teamply/Screen/Home/attendTeamProject/attendTeamProject.storyboard
@@ -28,6 +28,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="back"/>
+                                        <connections>
+                                            <action selector="backToHome:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Dkl-cT-vF6"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ix-R7-gne">
                                         <rect key="frame" x="118" y="61" width="147" height="21"/>
@@ -110,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.92307692307691" y="-17.061611374407583"/>
+            <point key="canvasLocation" x="135.38461538461539" y="-17.061611374407583"/>
         </scene>
     </scenes>
     <resources>
