--- a/Teamply/Teamply/Screen/Home/createTeamProject/createTeamProject.storyboard
+++ b/Teamply/Teamply/Screen/Home/createTeamProject/createTeamProject.storyboard
@@ -81,6 +81,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="vWm-rQ-3FR"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2rD-Jw-bUr">
