--- a/Teamply/Teamply/Screen/Home/schedule/schedule.storyboard
+++ b/Teamply/Teamply/Screen/Home/schedule/schedule.storyboard
@@ -104,12 +104,135 @@
             </objects>
             <point key="canvasLocation" x="60.305343511450381" y="-23.239436619718312"/>
         </scene>
+        <!--Regist Schedule View Controller-->
+        <scene sceneID="gej-P1-iAX">
+            <objects>
+                <viewController storyboardIdentifier="registVC" id="jhM-YF-22Z" customClass="registScheduleViewController" customModule="Teamply" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dNi-yy-OSw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cld-k5-xRe">
+                                <rect key="frame" x="22" y="81" width="10" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="8lc-0d-MZt"/>
+                                    <constraint firstAttribute="width" constant="10" id="p87-fG-0PA"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="back"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLA-wa-4ij">
+                                <rect key="frame" x="158" y="75" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YPT-FZ-yMR">
+                                <rect key="frame" x="24" y="209.66666666666666" width="345" height="18.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YkV-Dm-MRy">
+                                <rect key="frame" x="24" y="254.33333333333334" width="345" height="18.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LOS-3k-aVp">
+                                <rect key="frame" x="24" y="312" width="345" height="173"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="noT-yI-gtr">
+                                        <rect key="frame" x="17" y="14" width="311" height="145"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" name="gray0"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="noT-yI-gtr" secondAttribute="bottom" constant="14" id="EGt-xy-ldX"/>
+                                    <constraint firstAttribute="height" constant="173" id="RM0-cx-uat"/>
+                                    <constraint firstItem="noT-yI-gtr" firstAttribute="leading" secondItem="LOS-3k-aVp" secondAttribute="leading" constant="17" id="lfq-Xy-FjT"/>
+                                    <constraint firstAttribute="trailing" secondItem="noT-yI-gtr" secondAttribute="trailing" constant="17" id="r0e-49-Cs3"/>
+                                    <constraint firstItem="noT-yI-gtr" firstAttribute="top" secondItem="LOS-3k-aVp" secondAttribute="top" constant="14" id="vdv-2V-a0W"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e0O-XZ-2ob">
+                                <rect key="frame" x="24" y="165" width="345" height="18.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dG-7Q-zn7">
+                                <rect key="frame" x="24" y="189.66666666666666" width="345" height="1"/>
+                                <color key="backgroundColor" name="gray2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="NVs-sh-Xnn"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5y-5j-btZ">
+                                <rect key="frame" x="24" y="234.33333333333334" width="345" height="1"/>
+                                <color key="backgroundColor" name="gray2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Fjx-fO-YdK"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMx-ty-qvb">
+                                <rect key="frame" x="24" y="279" width="345" height="1"/>
+                                <color key="backgroundColor" name="gray2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="ml9-Ke-g9J"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i9H-Nl-Bmu">
+                                <rect key="frame" x="292" y="78" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="FUK-lH-e4N"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2dG-7Q-zn7" firstAttribute="top" secondItem="e0O-XZ-2ob" secondAttribute="bottom" constant="6" id="03G-KV-HWv"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="YkV-Dm-MRy" secondAttribute="trailing" constant="24" id="25k-nI-3dM"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="2dG-7Q-zn7" secondAttribute="trailing" constant="24" id="2DQ-hR-eMO"/>
+                            <constraint firstItem="mLA-wa-4ij" firstAttribute="top" secondItem="FUK-lH-e4N" secondAttribute="top" constant="16" id="7ka-md-Wpd"/>
+                            <constraint firstItem="b5y-5j-btZ" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="9T1-SF-LJA"/>
+                            <constraint firstItem="mLA-wa-4ij" firstAttribute="leading" secondItem="Cld-k5-xRe" secondAttribute="trailing" constant="126" id="Ahn-B9-jYN"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="i9H-Nl-Bmu" secondAttribute="trailing" constant="26" id="E83-53-dCN"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="YPT-FZ-yMR" secondAttribute="trailing" constant="24" id="Gbc-iP-D9u"/>
+                            <constraint firstItem="LOS-3k-aVp" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="L4i-eb-rTz"/>
+                            <constraint firstItem="e0O-XZ-2ob" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="L6m-xT-vEa"/>
+                            <constraint firstItem="Cld-k5-xRe" firstAttribute="top" secondItem="FUK-lH-e4N" secondAttribute="top" constant="22" id="S2y-di-Rnb"/>
+                            <constraint firstItem="i9H-Nl-Bmu" firstAttribute="top" secondItem="FUK-lH-e4N" secondAttribute="top" constant="19" id="SSz-DY-thv"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="hMx-ty-qvb" secondAttribute="trailing" constant="24" id="U1Q-Vf-w1d"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="e0O-XZ-2ob" secondAttribute="trailing" constant="24" id="WU5-dq-20N"/>
+                            <constraint firstItem="LOS-3k-aVp" firstAttribute="top" secondItem="hMx-ty-qvb" secondAttribute="bottom" constant="32" id="YR6-9i-1kF"/>
+                            <constraint firstItem="YkV-Dm-MRy" firstAttribute="top" secondItem="b5y-5j-btZ" secondAttribute="bottom" constant="19" id="Ysu-kU-wPn"/>
+                            <constraint firstItem="e0O-XZ-2ob" firstAttribute="top" secondItem="FUK-lH-e4N" secondAttribute="top" constant="106" id="af2-SO-wgN"/>
+                            <constraint firstItem="YkV-Dm-MRy" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="cGz-Tu-8hI"/>
+                            <constraint firstItem="2dG-7Q-zn7" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="cKL-qz-sdV"/>
+                            <constraint firstItem="YPT-FZ-yMR" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="civ-5X-Btq"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="LOS-3k-aVp" secondAttribute="trailing" constant="24" id="fNV-1D-XX5"/>
+                            <constraint firstItem="FUK-lH-e4N" firstAttribute="trailing" secondItem="b5y-5j-btZ" secondAttribute="trailing" constant="24" id="lja-2u-rG0"/>
+                            <constraint firstItem="hMx-ty-qvb" firstAttribute="top" secondItem="YkV-Dm-MRy" secondAttribute="bottom" constant="6" id="r6K-5b-FR0"/>
+                            <constraint firstItem="b5y-5j-btZ" firstAttribute="top" secondItem="YPT-FZ-yMR" secondAttribute="bottom" constant="6" id="tet-tn-Sw4"/>
+                            <constraint firstItem="YPT-FZ-yMR" firstAttribute="top" secondItem="2dG-7Q-zn7" secondAttribute="bottom" constant="19" id="v4t-25-YhM"/>
+                            <constraint firstItem="hMx-ty-qvb" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="24" id="xJM-cA-TdV"/>
+                            <constraint firstItem="Cld-k5-xRe" firstAttribute="leading" secondItem="FUK-lH-e4N" secondAttribute="leading" constant="22" id="xhM-Mi-hp0"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tdz-Ly-nxL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732.06106870229007" y="-14.084507042253522"/>
+        </scene>
     </scenes>
     <resources>
         <image name="back" width="10" height="16"/>
         <image name="regist" width="58" height="58"/>
         <namedColor name="gray0">
             <color red="0.96200001239776611" green="0.95599997043609619" blue="0.95599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="gray2">
+            <color red="0.83300000429153442" green="0.83300000429153442" blue="0.83300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
